--- a/client/src/style.css
+++ b/client/src/style.css
@@ -79,12 +79,12 @@ button{
     font-size: 25px;
     margin-top: 25px;
     width:100%;
-    min-height: 40%;
+    padding: 20px;
 }
 .note button{
     width: 48%;
-    margin:0.5%;
-    margin-bottom: 0%;
+    margin:0%;
+    padding:0px;
 }
 
 
